syntax = "proto3";

package yandex.cloud.priv.marketplace.licenseserver.v1.license;

import "google/protobuf/timestamp.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/marketplace/licenseserver/v1/license;license";
option java_package = "LI";

message Instance {
    string id = 1;
    string template_id = 2;
    string template_version_id = 3;
    string cloud_id = 4;
    string name = 5;
    google.protobuf.Timestamp start_time = 6;
    google.protobuf.Timestamp end_time = 7;
    google.protobuf.Timestamp created_at = 8;
    google.protobuf.Timestamp updated_at = 9;
    State state = 10;

    enum State {
        STATE_UNSPECIFIED = 0;
        PENDING = 1;
        ACTIVE = 2;
        CANCELLED = 3;
        EXPIRED = 4;
        DEPRECATED = 5;
        DELETED = 6;
    }
}
